--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
@@ -17,6 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-scroll": "^1.9.0",
     "typewriter-effect": "^2.21.0"
   },
