--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.22",
