--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
@@ -24,7 +25,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-scroll": "^1.9.0",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
